[package]
name = "deterministic_lockstep"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_replicon = "0.32.0"
bevy_replicon_renet = "0.9.0"
bevy_replicon_lockstep = { path = './replicon_lockstep' }
serde = "1.0.219"
avian3d = "0.2.1"
erased-serde = "0.4.6"
bincode = { version = "1.3" }

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_replicon_lockstep = { workspace = true }
serde = { workspace = true }
avian3d = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    './replicon_lockstep',
    './example',
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
