[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_replicon_lockstep = { workspace = true }
avian3d = { workspace = true }
bevy_reflect = "0.15.3"

[[bin]]
name = "example"
path = "main.rs"
