[package]
name = "bevy_replicon_lockstep"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }

[[bin]]
name = "example"
path = "main.rs"
