[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_replicon_lockstep = { workspace = true }
bevy_reflect = ">=0.15.3"
avian3d = { version = ">=0.2.1", default-features = false, features = ["3d", "f32", "parry-f32", "debug-plugin", "enhanced-determinism"] }

[[bin]]
name = "example"
path = "main.rs"
